将测试文件的截图加入文档

--- a/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1.vcxproj
@@ -94,6 +94,9 @@
   <ItemGroup>
     <Library Include="..\sqlite3.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\test1.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
